open account method is added